--- a/user.cfg
+++ b/user.cfg
@@ -1,6 +1,8 @@
 charge_pile_serial=ON000212122/2014
 price=0.576
 # 10 ms
-# HachikoTTL=10000000
-# 500us
-HachikoTTL=5000000
+HachikoTTL=10000000
+# 1 ms
+#HachikoTTL=1000000
+# 0.5ms
+HachikoTTL=500000
