--- a/user.cfg
+++ b/user.cfg
@@ -3,6 +3,6 @@ price=0.576
 # 10 ms
 HachikoTTL=10000000
 # 1 ms
-#HachikoTTL=1000000
+HachikoTTL=1000000
 # 0.9ms
-HachikoTTL=900000
+#HachikoTTL=900000
