git-svn-id: svn://192.168.1.8/ontom/trunk@1115 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -1,4 +1,4 @@
 SRCS=$(wildcard *.c)
-OBJS=$(patsubst %.c,%.o,$SRCS)
-y-deps+=printk.o kmain.o exec.o kmodel.o schedu.o signal.o time.o
+OBJS=$(patsubst %.c,%.o,$(SRCS))
+y-deps+=$(OBJS)
 include $(WORKDIR)/Rule.make
