git-svn-id: svn://192.168.1.8/ontom/trunk@1124 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -1,4 +1,9 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 y-deps+=$(OBJS)
+EX-OBJS+=libontom.a
+
+libontom.a:$(OBJS)
+	$(Q)$(AR) cqs -o $@ $^
+
 include $(WORKDIR)/Rule.make
