git-svn-id: svn://192.168.1.8/ontom/trunk@1126 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -4,6 +4,6 @@ y-deps+=$(OBJS)
 EX-OBJS+=libontom.a
 
 libontom.a:$(OBJS)
-	$(Q)$(AR) cqs  $^ -o $@
+	$(Q)$(AR) -cqs $@ $^
 
 include $(WORKDIR)/Rule.make
