--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -4,6 +4,7 @@ y-deps+=$(OBJS)
 EX-OBJS+=libontom.a
 
 libontom.a:$(OBJS)
+	$(Q)echo "  **AR**        `pwd`/$<"
 	$(Q)$(AR) -cqs $@ $^
 
 include $(WORKDIR)/Rule.make
