git-svn-id: svn://192.168.1.8/ontom/trunk@1143 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -1,7 +1,7 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 y-deps+=$(OBJS)
-EX-OBJS+=libontom.a
+EX-OBJS+=build-in.a
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**        `pwd`/$<"
