git-svn-id: svn://192.168.1.8/ontom/trunk@1161 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -4,7 +4,7 @@ y-deps+=$(OBJS)
 EX-OBJS+=build-in.a
 
 build-in.a:$(OBJS)
-	$(Q)echo "  **AR**      `pwd`/$<"
+	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
 include $(WORKDIR)/Rule.make
