git-svn-id: svn://192.168.1.8/ontom/trunk@2421 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom.cfg
+++ b/ontom.cfg
@@ -29,3 +29,19 @@ debug_lvB=false
 debug_lvC=false
 debug_lvD=false
 
+system_type=0
+comm_pro=1
+bus_count=1
+bus_v_hi=750.1
+bus_v_lo=399.9
+gun_count=4
+institu_ohm=50.0
+module_kind=4
+module_count=1
+comm_addr=0
+local_addr=1
+local_ip=192.168.1.57
+network_mask=255.255.255.0
+kwh_price=1.5
+work_mode=0
+kwh_meter_addr=000000000000000
