git-svn-id: svn://192.168.1.8/ontom/trunk@2549 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,6 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
-y-deps+=$(OBJS)
+m-deps+=$(OBJS)
 EX-OBJS+=build-in.a liblj.so
 
 build-in.a:$(OBJS)
