git-svn-id: svn://192.168.1.8/ontom/trunk@2633 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/thirdpart/extso/Makefile
+++ b/thirdpart/extso/Makefile
@@ -1,10 +1,14 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
-y-deps+=$(OBJS)
-EX-OBJS+=build-in.a
+m-deps+=$(OBJS)
+EX-OBJS+=build-in.a libexso.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
+
+libexso.so:$(OBJS)
+	$(Q)echo "  **LD**      $@"
+	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
 include $(WORKDIR)/Rule.make
