git-svn-id: svn://192.168.1.8/ontom/trunk@2635 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/thirdpart/sqlite/Makefile
+++ b/thirdpart/sqlite/Makefile
@@ -2,11 +2,11 @@ m-deps+=sqlite3.o
 EX-OBJS+=build-in.a libsqlite3.so
 EXFLAGS=-DSQLITE_THREADSAFE
 
-build-in.a:$(OBJS)
+build-in.a:sqlite3.o
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-libsqlite3.so:$(OBJS)
+libsqlite3.so:sqlite3.o
 	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
