git-svn-id: svn://192.168.1.8/ontom/trunk@2636 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/plugins/default/Makefile
+++ b/plugins/default/Makefile
@@ -7,7 +7,7 @@ build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-exso_default.so:$(OBJS)
+$(WORKDIR)/exso_default.so:$(OBJS)
 	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
