--- a/thirdpart/sqlite/Makefile
+++ b/thirdpart/sqlite/Makefile
@@ -6,7 +6,7 @@ build-in.a:sqlite3.o
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-libsqlite3.so:sqlite3.o
+$(WORKDIR)/libsqlite3.so:sqlite3.o
 	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
