git-svn-id: svn://192.168.1.8/ontom/trunk@2637 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/thirdpart/extso/Makefile
+++ b/thirdpart/extso/Makefile
@@ -1,7 +1,7 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a libexso.so
+EX-OBJS+=build-in.a $(WORKDIR)/libexso.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
