git-svn-id: svn://192.168.1.8/ontom/trunk@2638 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/plugins/default/Makefile
+++ b/plugins/default/Makefile
@@ -1,7 +1,7 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a exso_default.so
+EX-OBJS+=build-in.a $(WORKDIR)/exso_default.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
