git-svn-id: svn://192.168.1.8/ontom/trunk@2641 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/lib/lj/Makefile
+++ b/lib/lj/Makefile
@@ -1,13 +1,13 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a liblj.so
+EX-OBJS+=build-in.a $(WORKDIR)/liblj.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-liblj.so:$(OBJS)
+$(WORKDIR)/liblj.so:$(OBJS)
 	$(Q)echo "  **LD**      liblj.so"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
