git-svn-id: svn://192.168.1.8/ontom/trunk@2648 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/lib/lj/Makefile
+++ b/lib/lj/Makefile
@@ -8,7 +8,7 @@ build-in.a:$(OBJS)
 	$(Q)$(AR) -cqs $@ $^
 
 $(WORKDIR)/liblj.so:$(OBJS)
-	$(Q)echo "  **LD**      liblj.so"
+	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
 include $(WORKDIR)/Rule.make
