git-svn-id: svn://192.168.1.8/ontom/trunk@2651 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/plugins/demo/Makefile
+++ b/plugins/demo/Makefile
@@ -1,13 +1,13 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a exso_demo.so
+EX-OBJS+=build-in.a $(WORKDIR)/exso_demo.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-exso_demo.so:$(OBJS)
+$(WORKDIR)/exso_demo.so:$(OBJS)
 	$(Q)echo "  **LD**      exso_demo.so"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
