--- a/bmsdriver/beijingqiche/Makefile
+++ b/bmsdriver/beijingqiche/Makefile
@@ -1,13 +1,13 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a $(WORKDIR)/bmsdrv_1.so.1.0
+EX-OBJS+=build-in.a $(WORKDIR)/bmsdrv_1_1.0.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-$(WORKDIR)/bmsdrv_1.so.1.0:$(OBJS)
+$(WORKDIR)/bmsdrv_1_1.0.so:$(OBJS)
 	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
