--- a/bmsdriver/beijingqiche/Makefile
+++ b/bmsdriver/beijingqiche/Makefile
@@ -2,6 +2,7 @@ SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
 EX-OBJS+=build-in.a $(WORKDIR)/bmsdrv_1_1.0.so
+EXLDFLAGS+=-lbms
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
@@ -9,6 +10,6 @@ build-in.a:$(OBJS)
 
 $(WORKDIR)/bmsdrv_1_1.0.so:$(OBJS)
 	$(Q)echo "  **LD**      $@"
-	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
+	$(Q)$(LD) -shared $(LDFLAGS) $(EXLDFLAGS) -o $@ $^
 
 include $(WORKDIR)/Rule.make
