git-svn-id: svn://192.168.1.8/ontom/trunk@2960 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/bmsdriver/beijingqiche/Makefile
+++ b/bmsdriver/beijingqiche/Makefile
@@ -2,7 +2,7 @@ SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
 EX-OBJS+=build-in.a $(WORKDIR)/bmsdrv_1_1.0.so
-EXLDFLAGS+=_L$(WORKDIR) -lbms
+EXLDFLAGS+=-L$(WORKDIR) -lbms
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
