git-svn-id: svn://192.168.1.8/ontom/trunk@3106 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/lib/bms/Makefile
+++ b/lib/bms/Makefile
@@ -9,6 +9,6 @@ build-in.a:$(OBJS)
 
 $(WORKDIR)/libbms.so:$(OBJS)
 	$(Q)echo "  **LD**      $@"
-	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
+	$(Q)$(LD)  -fPIC -shared $(LDFLAGS) -o $@ $^
 
 include $(WORKDIR)/Rule.make
