git-svn-id: svn://192.168.1.8/ontom/trunk@3369 85aebdb3-f732-af43-9dbd-bcef24ea9265

--- a/ontom/Makefile
+++ b/ontom/Makefile
@@ -1,7 +1,12 @@
 SRCS=$(wildcard *.c)
+VERDEP=$(wildcard *.c) $(wildcard *.h) Makefile ../Makefile ../Rule.make ../lib/bms/* ../lib/lj/*
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 y-deps+=$(OBJS)
 EX-OBJS+=build-in.a
+
+ajax.o: $(VERDEP)
+
+tom.o : $(VERDEP)
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
