--- a/plugins/Q-GDW-11177.2-2014/Makefile
+++ b/plugins/Q-GDW-11177.2-2014/Makefile
@@ -1,13 +1,13 @@
 SRCS=$(wildcard *.c)
 OBJS=$(patsubst %.c,%.o,$(SRCS))
 m-deps+=$(OBJS)
-EX-OBJS+=build-in.a $(WORKDIR)/exso_p104.so
+EX-OBJS+=build-in.a $(WORKDIR)/exso_Q-GDW-11177.2-2014.so
 
 build-in.a:$(OBJS)
 	$(Q)echo "  **AR**      `pwd`/$@"
 	$(Q)$(AR) -cqs $@ $^
 
-$(WORKDIR)/exso_p104.so:$(OBJS)
+$(WORKDIR)/exso_Q-GDW-11177.2-2014.so:$(OBJS)
 	$(Q)echo "  **LD**      $@"
 	$(Q)$(LD) -shared $(LDFLAGS) -o $@ $^
 
